# concertina

./: .gitignore  PLAN.md  README.md  pyproject.toml
concertina/: bank_placer.py  config.py  cost_fast.py  cost_function.py  force_placer.py  geometry.py  greedy_placer.py  hayden_layout.py  lever_router.py  main.py  obstacles.py  reed_bank.py  reed_specs.py  sector_placer.py  solver.py  visualize.py
tests/: mini_fixture.py  test_config.py  test_cost_function.py  test_geometry.py  test_hayden_layout.py  test_lever_router.py  test_obstacles.py  test_reed_specs.py
