[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "concertina"
version = "0.1.0"
description = "Parametric concertina action board layout solver"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "shapely>=2.0",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]
cad = [
    "build123d>=0.5",
]

[project.scripts]
concertina = "concertina.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
